# secure-programming

./: .gitignore  LICENSE  README.md
server/: Cargo.toml
server/migrations/: V001__initialize.sql  V002__create-posts-table.sql  V002__initialize.sql  V003__add_user_id_to_sessions.sql
server/src/: main.rs  middleware.rs  models.rs
server/src/api/: auth.rs  errors.rs  mod.rs  posts.rs  user.rs  utilities.rs
server/src/db/: errors.rs  migrate-up.rs  mod.rs  models.rs  posts.rs  session_store.rs  user.rs
web/: .env.development  .eslintrc.js  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
web/components/: Link.tsx  NavBar.tsx  PasswordField.tsx  Post.tsx
web/pages/: _app.tsx  _document.tsx  index.tsx  login.tsx  profile.tsx  signup.tsx
web/types/api/: post.ts  user.ts  utilities.ts
web/utils/: constants.ts  theme.ts  useCsrf.ts  useUser.tsx  utilities.ts
