[package]
name = "secure-programming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrate-up"
path = "src/db/migrate-up.rs"

[dependencies]
actix-web = "4"
actix-session = "0.7.2"
actix-cors = "0.6.4"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1"] }
refinery = { version = "0.8.7", features = ["tokio-postgres"] }
tokio = "1.23.0"
async-trait = "0.1.66"
anyhow = "1.0.66"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"] }
deadpool-postgres = "0.10.5"
rand = "0.8.5"
