[package]
name = "secure-programming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrate-up"
path = "src/db/migrate-up.rs"

[dependencies]
actix-web = "4"
actix-session = "0.7.2"
actix-cors = "0.6.4"
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"] }
tokio-util = "0.7.7"
refinery = { version = "0.8.7", features = ["tokio-postgres"] }
tokio = "1.23.0"
async-trait = "0.1.66"
anyhow = "1.0.66"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"] }
deadpool-postgres = "0.10.5"
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
derive_more = "0.99.1"
uuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
csrf = "0.4.1"
futures-util = "0.3.27"
data-encoding = "2.3.3"
